# Janus

./: .appimageignore  .gitignore  Makefile  README.md  commands.c  commands.h  global.h  main.c  main.h  menu.c  menu.h  meson.build
data/: AppImageBuilder.yml  control  dev.pantheum.janus.desktop  dev.pantheum.janus.metainfo.xml  dev.pantheum.janus.yml  janus.desktop  meson.build  metainfo.xml  net.satyrn.janus.metainfo.xml  notes.desktop
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  janus.pot  meson.build  nl.po  notes.pot  tr.po
release/: .DirIcon  AppRun.c  Notes.desktop
src/: about.c  commands.c  commands.h  config.h  edit.c  file.c  global.h  init.c  init.h  main.c  menu.c  menu.h  meson.build  options.c  search.c  start.c  start.h
