install_data('janus.desktop', install_dir : get_option('datadir') / 'applications')
install_data('janus.png', install_dir : get_option('datadir') / 'icons/hicolor/256x256/apps')
install_data('metainfo.xml', install_dir : get_option('datadir') / 'metainfo', rename : 'dev.pantheum.janus.metainfo.xml')
