install_data('janus.desktop', install_dir : get_option('datadir') / 'applications', rename: 'dev.pantheum.janus.desktop')
install_data('janus.png', install_dir : get_option('datadir') / 'icons/hicolor/256x256/apps', rename : 'dev.pantheum.janus.png')
install_data('metainfo.xml', install_dir : get_option('datadir') / 'metainfo', rename : 'dev.pantheum.janus.metainfo.xml')
