install_data('dev.pantheum.janus.desktop', install_dir : get_option('datadir') / 'applications')
install_data('dev.pantheum.janus.png', install_dir : get_option('datadir') / 'icons/hicolor/256x256/apps')
install_data('dev.pantheum.janus.metainfo.xml', install_dir : get_option('datadir') / 'metainfo')
